# DeepCNNClassifierSep11

./: .gitignore  LICENSE  README.MD  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
src/deepClassifier/: __init__.py
