[metadata]
license = MIT
license_file = license
classifier = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7   
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options] #mention dependencies
install_requires = 
    ensure == 1.0.2
python_requires = >=3.7

[options.extras_require]
testing = 
    pytest>=7.1.3 #run unit and integraton testing
    mypy>=0.971 # checks for typing errors
    flake8>=5.0.4 #checks for unwanted mistakes
    tox>=3.25.2
    black>=22.8.0 #black is to check the Python coding standards

[options.package_data]
deepClassifier = py.typed

[flake8] #setting up the standrads for your file
max-line-length = 160
exclude = __init__.py